[project]
name = "notetrans"
version = "0.1.0"
description = "Export HackMD notes to Obsidian-compatible Markdown with PARA classification and LLM-powered Zettelkasten extraction."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "notetrans contributors" },
]
keywords = ["hackmd", "obsidian", "markdown", "export", "zettelkasten", "para"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/OWNER/notetrans"
Repository = "https://github.com/OWNER/notetrans"
Changelog = "https://github.com/OWNER/notetrans/blob/main/CHANGELOG.md"
Issues = "https://github.com/OWNER/notetrans/issues"

[project.scripts]
notetrans = "notetrans.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]
